# Drift

./: .clang-tidy  .gitignore  .gitmodules  meson.build  meson_options.txt  skia.sh
.github/workflows/: c-cpp.yml
include/components/: FadeActivity.h  Text.h  Window.h
include/components/activities/: ActivityEffect.h
include/core/: Activity.h  Application.h  ApplicationInfo.h  Element.h  FontManager.h  LayoutEnums.h  Logger.h  Macros.h  Scheduler.h  View.h  WorkerScheduler.h
include/events/: DesktopEventLoop.h  DummyEventLoop.h  EventLoop.h  EventManager.h  InputSystem.h  Keycode.h  MutableValue.h  Observable.h  ShortcutManager.h
include/graphics/: RendererContext.h
include/styles/: AnimationScheduler.h  AnimationStyles.h  LayoutStyles.h  LayoutStyles.new.h  RenderingStyles.h  Style.h  TransitionFunction.h  TypographyStyles.h
include/utils/: BoundingBox.h  BoundingBoxV.h  Color.h  ConfigManager.h  CubicBezier.h  Demangle.h  LibraryManager.h  PerformanceTimer.h  Scheduler.h  StringUtils.h  TaskScheduler.h  TextRunHandler.h  Thread.h  Time.h  Vector2.h  WorkManager.h
include/utils/utf/: checked.h  utf8.h
sandbox/: main.cpp
src/components/: FadeActivity.cpp  Text.cpp  Window.cpp
src/components/activities/: ActivityEffect.cpp
src/core/: Activity.cpp  Application.cpp  ApplicationInfo.cpp  Element.cpp  FontManager.cpp  Scheduler.cpp  View.cpp  WorkerScheduler.cpp
src/events/: DesktopEventLoop.cpp  DummyEventLoop.cpp  EventLoop.cpp  EventManager.cpp  InputSystem.cpp  Observable.cpp  ShortcutManager.cpp
src/graphics/: RendererContext.cpp
src/styles/: AnimationScheduler.cpp  RenderingStyles.cpp  Style.cpp  TransitionFunction.cpp
src/utils/: ConfigManager.cpp  CubicBezier.cpp  Demangle.cpp  LibraryManager.cpp  PerformanceTimer.cpp  Scheduler.cpp  Thread.cpp  Time.cpp
subprojects/skia/: meson.build
tools/: SHA256.cpp  SHA256.h  base64.hpp
