option(
    'no_wayland',
    type: 'boolean',
    value: false,
    description: 'Whether to compile or not with Wayland extensions for Glfw',
)

option(
    'no_desktop',
    type: 'boolean',
    value: false,
    description: 'Whether to compile or not with desktop support using Glfw',
)

option(
    'verbose',
    type: 'boolean',
    value: false,
    description: 'Whether to compile with debug messages',
)